tests/struct_in_fun_error.june
// error: unknown type

fun foo() {
    struct Employee {
        name: string,
        age: i64,
    }
}

let employee = new shared Employee(name: "Bob", age: 123)
println(employee.age)
